--- a/css/roarbikes.css
+++ b/css/roarbikes.css
@@ -64,26 +64,31 @@ html {
   background-image: url("../Assets/RoarBikes/In-SituAngle-1.png");
   /* min-width: 100%; */
   min-height: 100%;
+  max-width: 100% auto;
 }
 
 .bgimg-2 {
   background-color: #ffab1529;
   min-height: 100%;
+  /* max-width: 100% auto; */
 }
 
 .bgimg-3 {
   background-image: url("../Assets/RoarBikes/wireframebg.png");
   background-color: #e4e4e4;
   min-height: 100%;
+  max-width: 100% auto;
 }
 .bgimg-4 {
   background-image: url("../Assets/RoarBikes/hi-fimockup.png");
   min-height: 100%;
+  max-width: 100% auto;
 }
 .bgimg-5 {
   background-color: #f5bebe;
   min-height: 60%;
   padding-bottom: 10%;
+  /* max-width: 100% auto; */
 }
 .caption {
   position: absolute;
@@ -114,7 +119,7 @@ h4 {
 }
 
 /* Turn off parallax scrolling for tablets and phones */
-/* @media only screen and (max-device-width: 1024px) {
+@media only screen and (max-device-width: 1024px) {
   .bgimg-1,
   .bgimg-2,
   .bgimg-3,
@@ -122,7 +127,7 @@ h4 {
   .bgimg-5 {
     background-attachment: scroll;
   }
-} */
+}
 
 hr {
   margin-top: 1rem;
